[package]
name = "d3v-lr"
version = "0.1.0"
authors = ["Corentin Gouil <corentin.gouil@etudiant.univ-lr.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.10.5"
askama_tide = "0.13.0"
structopt = "0.3"
lazy_static = "1.4"